apps/web/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: ghcr.io/iteam1337/gitops-kodlunch-web:0.0.3 # {"$imagepolicy": "flux-system:web"}
        name: web
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "1Gi"
