apps/web/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web
spec:
  ports:
  - port: 80
  selector:
    app: web
